Commit before checkout